# osu-api-bridge

./: Cargo.toml  Dockerfile  Justfile  README.md  default-config.yml
.cargo/: config.toml
migrations/: 20240924045550_daily-challenges-init.down.sql  20240924045550_daily-challenges-init.up.sql  20240924064321_user-refresh-token.down.sql  20240924064321_user-refresh-token.up.sql  20240925205709_rankings-indices.down.sql  20240925205709_rankings-indices.up.sql  20240925233047_daily-challenge-user-rank.down.sql  20240925233047_daily-challenge-user-rank.up.sql  20240927200429_daily-challenges-metadata.down.sql  20240927200429_daily-challenges-metadata.up.sql  20260418000000_matchmaking-scalar-init.down.sql  20260418000000_matchmaking-scalar-init.up.sql
src/: db.rs  main.rs  metrics.rs  mods.rs  oauth.rs  osu_api.rs  server.rs  settings.rs  util.rs
src/server/: admin.rs  analysis.rs  analytics.rs  daily_challenge.rs  osutrack_update.rs  simulate_play.rs
