[package]
name = "osu-api-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundations = { version = "3.2", default-features = false, features = [
  "settings",
  "metrics",
  "telemetry-server",
  "testing",
  "jemalloc",
  "tokio-runtime-metrics",
  "memory-profiling",
  "cli",
] }
tokio = { version = "1.36", features = ["full"] }
serde_default_utils = "0.2"
axum = { version = "0.7", features = ["tower-log"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
lazy_static = "1.4"
chrono = "0.4"
float-ord = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "mysql"], default-features = false, optional = true }
flate2 = { version = "1.0", optional = true }
rosu-pp = { version = "1.0", optional = true }
rosu-v2 = { version = "0.8", optional = true }

[features]
sql = ["sqlx"]
simulate_play = ["sql", "flate2", "rosu-pp", "rosu-v2"]
default = ["simulate_play"]
