[package]
name = "osu-api-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundations = { version = "3.2", default-features = false, features = ["settings", "metrics", "telemetry-server", "testing", "jemalloc", "tokio-runtime-metrics", "memory-profiling", "cli"] }
tokio = { version = "1.36", features = ["full"] }
serde_default_utils = "0.3"
axum = { version = "0.8", features = ["tower-log"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
float-ord = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "mysql", "chrono"], default-features = false, optional = true }
flate2 = { version = "1.0", optional = true }
rosu-pp = { version = "2.0", optional = true }
rosu-v2 = { version = "0.9", optional = true }
arc-swap = "1.7.1"
fxhash = "0.2.1"
pin-project = "1.1.5"

[features]
sql = ["sqlx"]
simulate_play = ["sql", "flate2", "rosu-pp", "rosu-v2"]
daily_challenge = ["sql", "rosu-v2"]
default = ["simulate_play", "daily_challenge"]
