[package]
name = "osu-api-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundations = { version = "5.3", default-features = false, features = ["settings", "metrics", "telemetry-server", "testing", "jemalloc", "tokio-runtime-metrics", "memory-profiling", "cli"] }
tokio = { version = "1.36", features = ["full"] }
serde_default_utils = "0.3"
axum = { version = "0.8", features = ["tower-log"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
float-ord = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "mysql", "chrono", "json"], default-features = false, optional = true }
flate2 = { version = "1.0", optional = true }
rosu-pp = { version = "3.1", optional = true }
rosu-mods = { version = "0.3", optional = true }
rosu-v2 = { version = "0.11", optional = true }
arc-swap = "1.7.1"
fxhash = "0.2.1"
pin-project = "1.1.5"
dashmap = "6.1.0"
moka = { version = "0.12.11", features = ["sync"] }
sha2 = "0.10.9"
nalgebra = "0.34.1"
pco = "0.4.7"
plotters = "0.3.7"
image = { version = "0.25.9", default-features = false, features = ["png", "rayon"] }
rand = "0.9"

[features]
sql = ["sqlx"]
simulate_play = ["sql", "flate2", "rosu-pp", "rosu-mods", "rosu-v2"]
daily_challenge = ["sql", "rosu-v2"]
default = ["simulate_play", "daily_challenge"]
